---
source: packages/llvm/src/tests/control_flow/if_block.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x_ = alloca double, align 8
  store double 1.000000e+00, double* %x_, align 8
  %"2" = load double, double* %x_, align 8
  %"1" = fcmp oeq double %"2", 1.000000e+00
  br i1 %"1", label %Block_0, label %Block_1

Block_0:                                          ; preds = %entry
  %y_0 = alloca double, align 8
  store double 2.000000e+00, double* %y_0, align 8
  br label %Block_2

Block_1:                                          ; preds = %entry
  %y_1 = alloca double, align 8
  store double 3.000000e+00, double* %y_1, align 8
  br label %Block_2

Block_2:                                          ; preds = %Block_1, %Block_0
  ret void
}

